--- a/references.bib
+++ b/references.bib
@@ -2710,3 +2710,12 @@ author = {Mitzi Morris and Katherine Wheeler-Martin and Dan Simpson and Stephen 
   URL = {https://doi.org/10.1201/9780429459016},
   doi = {10.1201/9780429459016}
 }
+
+@article{chau2021deconditional,
+  title={Deconditional downscaling with gaussian processes},
+  author={Chau, Siu Lun and Bouabid, Shahine and Sejdinovic, Dino},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={17813--17825},
+  year={2021}
+}
