--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -4,10 +4,21 @@
 
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
+```{r}
+resource_version <- "20231117-120742-7a6a613f"
+```
+
 # Models for spatial structure
 
 ## Comparison of AGHQ to NUTS {#aghq-nuts}
 
-## Simulation study
+## Simulation study {#simulation-appendix}
 
-## HIV study
+```{r}
+gt_crps <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_crps.rds"))
+gt_crps
+```
+
+Table: (\#tab:crps) The CRPS.
+
+## HIV study {#hiv-appendix}
