Add calibration plots to appendix

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231117-120742-7a6a613f"
+resource_version <- "20231117-144617-43df13cd"
 ```
 
 # Models for spatial structure
@@ -14,12 +14,58 @@ resource_version <- "20231117-120742-7a6a613f"
 
 ## Simulation study {#simulation-appendix}
 
+### Mean squared error
+
+### Continuous ranked probability score
+
 ```{r}
 gt_crps <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_crps.rds"))
 if(knitr::is_html_output()) gt_crps
 if(knitr::is_latex_output()) gt_crps %>% gt::as_latex()
 ```
 
-Table: (\#tab:crps) The CRPS.
+### Calibration
+
+(ref:histogram-ecdf-diff-1) Figure caption.
+
+```{r histogram-ecdf-diff-1, fig.cap="(ref:histogram-ecdf-diff-1)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-1.png"))
+```
+
+(ref:histogram-ecdf-diff-2) Figure caption.
+
+```{r histogram-ecdf-diff-2, fig.cap="(ref:histogram-ecdf-diff-2)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-2.png"))
+```
+
+(ref:histogram-ecdf-diff-3) Figure caption.
+
+```{r histogram-ecdf-diff-3, fig.cap="(ref:histogram-ecdf-diff-3)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-3.png"))
+```
+
+(ref:histogram-ecdf-diff-4) Figure caption.
+
+```{r histogram-ecdf-diff-4, fig.cap="(ref:histogram-ecdf-diff-4)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-4.png"))
+```
+
+(ref:histogram-ecdf-diff-grid) Figure caption.
+
+```{r histogram-ecdf-diff-grid, fig.cap="(ref:histogram-ecdf-diff-grid)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-grid.png"))
+```
+
+(ref:histogram-ecdf-diff-civ) Figure caption.
+
+```{r histogram-ecdf-diff-civ, fig.cap="(ref:histogram-ecdf-diff-civ)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-civ.png"))
+```
+
+(ref:histogram-ecdf-diff-tex) Figure caption.
+
+```{r histogram-ecdf-diff-tex, fig.cap="(ref:histogram-ecdf-diff-tex)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-tex.png"))
+```
 
 ## HIV study {#hiv-appendix}
