Sparse BYM2 cite!

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -464,7 +464,7 @@ For each of the three spatial random effect models and seven geometries 100 simu
 | FIK   | $\mathbf{u} \sim \mathcal{N}(0, \tau_u^{-1} \mathbf{K})$ with $K_{ij} = \cdots$ as in Section \@ref(integrated-kernel) with fixed length-scale $l$ |
 | IK    | $\mathbf{u} \sim \mathcal{N}(0, \tau_u^{-1} \mathbf{K})$ with $K_{ij} = \cdots$ as in Section \@ref(integrated-kernel) with length-scale prior distribution $l \sim \mathrm{Inv{\text-}Gamma}(a, b)$ |
 
-Table: (\#tab:inferential-models) The models used for inference. Each model is implemented in the `arealutils` package.
+Table: (\#tab:inferential-models) The models used for inference. Each model is implemented in the `arealutils` package. The BYM2 model was implemented using the sparsity preserving parameterisation described in Section 3.2 of @riebler2016intuitive.
 
 Eight inferential models were fit to the synthetic data (Table \@ref(tab:inferential-models)).
 Apart from the spatial random effect specification, each inferential model corresponded exactly to the simulation model.
