--- a/references.bib
+++ b/references.bib
@@ -2719,3 +2719,15 @@ author = {Mitzi Morris and Katherine Wheeler-Martin and Dan Simpson and Stephen 
   pages={17813--17825},
   year={2021}
 }
+
+@article{riebler2016intuitive,
+  title={An intuitive Bayesian spatial model for disease mapping that accounts for scaling},
+  author={Riebler, Andrea and S{\o}rbye, Sigrunn H and Simpson, Daniel and Rue, H{\aa}vard},
+  journal={Statistical methods in medical research},
+  volume={25},
+  number={4},
+  pages={1145--1165},
+  year={2016},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
