Add Besag equation to slides

--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -24,6 +24,12 @@ knitr::include_graphics("../figures/hiv-aids/naomi-continent.png")
 
 #
 
+```{r besag, echo=FALSE, out.width="70%", fig.align = 'center'}
+knitr::include_graphics("besag.png")
+```
+
+#
+
 ```{r geometry-graph, echo=FALSE, out.width="95%"}
 knitr::include_graphics("../figures/beyond-borders/geometry-graph.png")
 ```
