More figures in

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231117-144617-43df13cd"
+resource_version <- "20231119-201207-bc89d17f"
 ```
 
 # Models for spatial structure {#beyond-borders}
@@ -557,7 +557,8 @@ These included countries were:
 (ref:hiv-surveys) Adult (15-49) HIV prevalence from the most recent PHIA survey in Côte d'Ivoire (Panel A), Malawi (Panel B), Tanzania (Panel C), and Zimbabwe (Panel D).
 
 ```{r hiv-surveys, fig.cap="(ref:hiv-surveys)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/hiv-surveys.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/hiv-surveys.png")
+knitr::include_graphics(path)
 ```
 
 Data from the most recent publicly available Population Health Impact Assessment (PHIA) survey were used for each country.
