--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231117-144617-43df13cd"
+resource_version <- "20231119-201207-bc89d17f"
 ```
 
 # Models for spatial structure
@@ -15,6 +15,12 @@ resource_version <- "20231117-144617-43df13cd"
 ## Simulation study {#simulation-appendix}
 
 ### Mean squared error
+
+```{r}
+gt_mse <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_mse.rds"))
+if(knitr::is_html_output()) gt_mse
+if(knitr::is_latex_output()) gt_mse %>% gt::as_latex()
+```
 
 ### Continuous ranked probability score
 
@@ -29,43 +35,72 @@ if(knitr::is_latex_output()) gt_crps %>% gt::as_latex()
 (ref:histogram-ecdf-diff-1) Figure caption.
 
 ```{r histogram-ecdf-diff-1, fig.cap="(ref:histogram-ecdf-diff-1)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-1.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-1.png")
+knitr::include_graphics(path)
 ```
 
 (ref:histogram-ecdf-diff-2) Figure caption.
 
 ```{r histogram-ecdf-diff-2, fig.cap="(ref:histogram-ecdf-diff-2)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-2.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-2.png")
+knitr::include_graphics(path)
 ```
 
 (ref:histogram-ecdf-diff-3) Figure caption.
 
 ```{r histogram-ecdf-diff-3, fig.cap="(ref:histogram-ecdf-diff-3)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-3.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-3.png")
+knitr::include_graphics(path)
 ```
 
 (ref:histogram-ecdf-diff-4) Figure caption.
 
 ```{r histogram-ecdf-diff-4, fig.cap="(ref:histogram-ecdf-diff-4)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-4.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-4.png")
+knitr::include_graphics(path)
 ```
 
 (ref:histogram-ecdf-diff-grid) Figure caption.
 
 ```{r histogram-ecdf-diff-grid, fig.cap="(ref:histogram-ecdf-diff-grid)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-grid.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-grid.png")
+knitr::include_graphics(path)
 ```
 
 (ref:histogram-ecdf-diff-civ) Figure caption.
 
 ```{r histogram-ecdf-diff-civ, fig.cap="(ref:histogram-ecdf-diff-civ)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-civ.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-civ.png")
+knitr::include_graphics(path)
 ```
 
 (ref:histogram-ecdf-diff-tex) Figure caption.
 
 ```{r histogram-ecdf-diff-tex, fig.cap="(ref:histogram-ecdf-diff-tex)"}
-knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-tex.png"))
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-tex.png")
+knitr::include_graphics(path)
 ```
 
 ## HIV study {#hiv-appendix}
+
+### Estimates
+
+(ref:ladder-civ2017phia) Figure caption.
+
+```{r ladder-civ2017phia, fig.cap="(ref:ladder-civ2017phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-civ2017phia.png"))
+```
+
+(ref:ladder-tza2017phia) Figure caption.
+
+```{r ladder-tza2017phia, fig.cap="(ref:ladder-tza2017phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-tza2017phia.png"))
+```
+
+(ref:ladder-zwe2016phia) Figure caption.
+
+```{r ladder-zwe2016phia, fig.cap="(ref:ladder-zwe2016phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-zwe2016phia.png"))
+```
+
+### Cross-validation
