Fix two multi-agyw appendix tables

--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -6,38 +6,24 @@ resource_version <- "20230627-144735-3da88508"
 
 ## The Global AIDS Strategy
 
-\begin{table}[h]
-\centering
-\begin{tabularx}{\textwidth}{lX}
-\toprule
-Prioritisation strata & Criterion  \\
-\midrule
-Low & 0.3-1.0\% incidence and low-risk behaviour, or $<$0.3\% incidence and high-risk behaviour \\
-Moderate & 1.0-3.0\% incidence and low-risk behaviour, or 0.3-1.0\% incidence and high-risk behaviour \\
-High & 1.0-3.0\% incidence and high-risk behaviour \\
-Very high & $>$3.0\% incidence \\
-\bottomrule
-\end{tabularx}
-\caption{Prioritisation strata according to HIV incidence in the general population and behavioural risk.}
-\label{tab:unaids-strategy-prioritisation}
-\end{table}
+| Prioritisation strata | Criterion                                                                                  |
+|-----------------------|--------------------------------------------------------------------------------------------|
+| Low                   | 0.3-1.0\% incidence and low-risk behaviour, or <0.3\% incidence and high-risk behaviour    |
+| Moderate              | 1.0-3.0\% incidence and low-risk behaviour, or 0.3-1.0\% incidence and high-risk behaviour |
+| High                  | 1.0-3.0\% incidence and high-risk behaviour                                                |
+| Very high             | >3.0\% incidence                                                                           |
 
-\begin{table}[h]
-\centering
-\begin{tabularx}{\textwidth}{p{8cm}XXXX}
-\toprule
-Intervention & Low & Moderate & High & Very High \\
-\midrule
-Condoms and lube for those with non-regular partners(s) with unknown STI status and not on PrEP & 50\% & 70\% & 95\% & 95\% \\
-STI screening and treatment & 10\% & 10\% & 80\% & 80\% \\
-Access to PEP & - & - & 50\% & 90\% \\
-PrEP use & - & 5\% & 50\% & 50\% \\
-Economic empowerment & - & - & 20\% & 20\% \\
-\bottomrule
-\end{tabularx}
-\caption{Commitments to be met for each intervention in terms of proportion of the prioritisation strata reached. The symbol "-" represents no commitment.}
-\label{tab:unaids-strategy-targets}
-\end{table}
+Table: (\#tab:unaids-strategy-prioritisation) Prioritisation strata according to HIV incidence in the general population and behavioural risk.
+
+| Intervention                                                 | Low  | Moderate | High | Very High |
+|--------------------------------------------------------------|------|----------|------|-----------|
+| Condoms and lube for those with non-regular partners(s), unknown STI status, not on PrEP | 50\% | 70\% | 95\% | 95\% |
+| STI screening and treatment                                  | 10\% | 10\%     | 80\% | 80\%      |
+| Access to PEP                                                | -    | -        | 50\% | 90\%      |
+| PrEP use                                                     | -    | 5\%      | 50\% | 50\%      |
+| Economic empowerment                                         | -    | -        | 20\% | 20\%      |
+
+Table: (\#tab:unaids-strategy-targets) Commitments to be met for each intervention, given in terms of the proportion of the prioritisation strata reached. The symbol "-" represents no commitment.
 
 ## Household survey data
 
